--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ div{
 .red{ 
         background-color: #ff0000;
         text-align: right;
+        min-height: 175px;
         margin-left: 50px;
         border: inherit;
         border-bottom: 2px solid #fff;
@@ -63,6 +64,7 @@ div{
 div.blue{
         background-color: #0000ff;
         text-align: left;
+        min-height: 175px;
         margin-right: 50px;
         border: inherit;
         border-right: 5px solid #fff;
@@ -79,6 +81,7 @@ div.blue{
 div.yellow{
         background-color:#ffff00;
         text-align: right;
+        min-height: 175px;
         margin-left: 50px;
         border: inherit;
         border-bottom: 2px solid #fff;
@@ -94,6 +97,7 @@ div.yellow{
 div.green{
         background-color: #008500;
         text-align: left;
+        min-height: 175px;
         margin-right: 50px;
         border: inherit;
         border-right: 5px solid #fff;
@@ -106,7 +110,9 @@ footer{
         background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,255,1) 25%, rgba(0,102,255,1) 70%, rgba(0,0,0,1) 100%);
         border: 5px solid #fff;
         text-align: right;
-        padding: 15px 15px 15px 0;
+        padding-top: 15px;
+        padding-right: 15px;
+        padding-bottom: 15px;
         
 }
 
