--- a/css/style.css
+++ b/css/style.css
@@ -106,13 +106,11 @@ footer{
         background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,255,1) 25%, rgba(0,102,255,1) 70%, rgba(0,0,0,1) 100%);
         border: 5px solid #fff;
         text-align: right;
-        padding-top: 15px;
-        padding-right: 15px;
-        padding-bottom: 15px;
-        
+   
 }
 
 footer p{
         font-size:20px;
+        padding: 15px, 15px, 15px, 0;
 
 }
