--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,8 @@ footer{
 
 footer p{
         font-size:20px;
-        padding: 15px, 15px, 15px, 0;
-
+        padding-top: 15px;
+        padding-right: 15px;
+        padding-bottom: 15px;
+        padding-left: 0px;
 }
