--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ div.blue{
         
 }
 
-.blue p, .blue h2{
+div.blue p, div.blue h2{
         
         color:#c4c4c4;
 
@@ -86,7 +86,7 @@ div.yellow{
 
 }
 
-.yellow p{
+div.yellow p{
         color:#707070;
 
 }
